[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Collectibles/Skulls.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Collectibles/Skulls.webp" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 29.0172

[node name="SkullWhiBlood" type="Area2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, -25 )
rotation = -0.6578
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 199.28, 6.90554, 57.7037, 59.4702 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 8.00001, -0.999998 )
rotation = -0.604481
scale = Vector2( 0.407143, 0.392857 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 192.216, 76.0233, 70.7026, 28.9911 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( -1.99999, 7 )
rotation = 0.348445
scale = Vector2( 0.407143, 0.392857 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 192.216, 76.0233, 70.7026, 28.9911 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 7, -2 )
rotation = 0.557546
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 268.32, 9.63796, 69.1661, 54.5764 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, -12 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_SkullWhiBlood_body_entered"]
