[gd_scene load_steps=4 format=2]

[ext_resource path="res://Skulls.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Collectibles/Skulls.webp" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0179

[node name="SkullYelBlood" type="Area2D"]
position = Vector2( 0, 1 )
collision_layer = 2
collision_mask = 8
script = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 14, -15 )
rotation = -0.661945
scale = Vector2( 0.438647, 0.456628 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 190, 361, 76, 29 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( -4, -7 )
rotation = 0.935086
scale = Vector2( 0.391178, 0.434213 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 190, 361, 76, 29 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -6, 2 )
scale = Vector2( 0.472222, 0.481818 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 267, 294, 72, 55 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9, -5 )
rotation = -1.22472
scale = Vector2( 0.493277, 0.525772 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 199, 291, 58, 61 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -2 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_SkullYelBlood_body_entered"]
